MAJ CSS recipes card

--- a/index.html
+++ b/index.html
@@ -212,7 +212,8 @@
   </div>
 </div>
 <!-- Section où les médias seront affichés -->
-<div id="media-container" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-16 pl-20  overflow-y-auto">
+<div id="media-container" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8 px-24 ">
+
     <!-- Les recettes/médias seront injectés dynamiquement ici -->
 </div>
 
