--- a/index.html
+++ b/index.html
@@ -144,15 +144,15 @@
 <div class="relative w-full  pt-4 h-22 z-10">
   <div class="flex gap-20 right-10 mb-20 h-6 z-10">
   <!-- Filtres dynamiques des ingrédients -->
-<div class="relative w-40 ml-32 rounded ">
-  <label for="ingredients-search" class=" block  bg-white text-black-500 px-2 py-4 rounded cursor-pointer">
+<div class="relative w-44 ml-32 rounded ">
+  <label for="ingredients-search" class=" block  bg-white text-black-500 px-3 py-3 rounded cursor-pointer">
   Ingrédients  
   <span class="arrow "> <!-- Ajoute un espace entre le texte et l'image -->
     <img src="./assets/flèche-descendante.png" alt="Flèche vers le bas" class="w-4 h-4 ml-10 inline-block"> <!-- Image de la flèche -->
   </span>
   </label>
   <!-- Conteneur pour l'input et la loupe -->
-  <div id="ingredients-input-container" class=" flex w-40 p-2 bg-white opacity-0 pointer-events-none transition-opacity duration-300 relative z-10">
+  <div id="ingredients-input-container" class=" flex w-44 p-2 bg-white opacity-0 pointer-events-none transition-opacity duration-300 relative z-10">
   <input id="ingredients-search" type="text" placeholder="Rechercher" class="search-input w-full pl-4 rounded border border-gray-300 placeholder-gray-300 placeholder-opacity-50 focus:outline-none focus:border-gray-300 focus:ring-0 focus:inset-1 focus:placeholder-transparent relative " autocomplete="off">
   <button id="ingredients-clear-search" class="absolute right-16 top-16 text-gray-400 hidden" aria-label="Effacer la recherche">
     <img src="./assets/croix-grise.png" alt="icone d'une croix" class="croix-grise relative bottom-10 left-3">
@@ -165,15 +165,15 @@
   <ul id="ingredients" class="filter-list hidden bg-white rounded mt-2 relative z-10" ></ul>
 </div>
 <!-- Filtres dynamiques des appareils -->
-<div class="relative w-40 ml-2 rounded">
-  <label for="appareils-search" class="relative block  bg-white text-black-500 px-2 py-3 rounded cursor-pointer">
+<div class="relative w-44 ml-2 rounded">
+  <label for="appareils-search" class="relative block  bg-white text-black-500 px-3 py-3 rounded cursor-pointer">
   Appareils  
   <span class="arrow "> <!-- Ajoute un espace entre le texte et l'image -->
     <img src="./assets/flèche-descendante.png" alt="Flèche vers le bas" class="w-4 h-4 ml-10 inline-block"> <!-- Image de la flèche -->
   </span>
   </label>
   <!-- Conteneur pour l'input et la loupe -->
-  <div id="appareils-input-container" class=" flex w-40 p-2 bg-white opacity-0 pointer-events-none transition-opacity duration-300 relative z-10">
+  <div id="appareils-input-container" class=" flex w-44 p-2 bg-white opacity-0 pointer-events-none transition-opacity duration-300 relative z-10">
   <input id="appareils-search" type="text" placeholder="Rechercher" class="search-input w-full pl-4 rounded border border-gray-300 placeholder-gray-300 placeholder-opacity-50 focus:outline-none focus:border-gray-300 focus:ring-0 focus:inset-1 focus:placeholder-transparent" autocomplete="off">
   <button id="appareils-clear-search" class="absolute right-16 top-16 pb-2  text-gray-400 hidden" aria-label="Effacer la recherche">
     <img src="./assets/croix-grise.png" alt="icone d'une croix" class="croix-grise relative bottom-10 left-3 " ><!-- Symbole de la croix -->
@@ -185,15 +185,15 @@
   <ul id="appareils" class="filter-list hidden bg-white rounded mt-2 relative z-10 " ></ul>
 </div>
 <!-- Filtres dynamiques des ustensiles -->
-<div class="relative w-40 ml-2 rounded">
-  <label for="ustensiles-search" class="relative block  bg-white text-black-500 px-2 py-3 rounded cursor-pointer">
+<div class="relative w-44 ml-2 rounded">
+  <label for="ustensiles-search" class="relative block  bg-white text-black-500 px-3 py-3 rounded cursor-pointer">
   Ustensiles  
   <span class="arrow "> <!-- Ajoute un espace entre le texte et l'image -->
     <img src="./assets/flèche-descendante.png" alt="Flèche vers le bas" class="w-4 h-4 ml-10 inline-block"> <!-- Image de la flèche -->
   </span>
   </label>
   <!-- Conteneur pour l'input et la loupe -->
-  <div id="ustensiles-input-container" class=" flex w-40 p-2 bg-white opacity-0 pointer-events-none transition-opacity duration-300 relative z-10">
+  <div id="ustensiles-input-container" class=" flex w-44 p-2 bg-white opacity-0 pointer-events-none transition-opacity duration-300 relative z-10">
   <input id="ustensiles-search" type="text" placeholder="Rechercher" class="search-input w-full pl-4 rounded border border-gray-300 placeholder-gray-300 placeholder-opacity-50 focus:outline-none focus:border-gray-300 focus:ring-0 focus:inset-1 focus:placeholder-transparent" autocomplete="off">
   <button id="ustensiles-clear-search" class="absolute right-16 top-16  text-gray-400 hidden" aria-label="Effacer la recherche">
     <img src="./assets/croix-grise.png" alt="icone d'une croix" class="croix-grise relative bottom-10 left-3" ><!-- Symbole de la croix -->
@@ -205,7 +205,7 @@
   <ul id="ustensiles" class="filter-list hidden bg-white rounded mt-2 relative z-10 " ></ul>
 </div>
  <!-- Compteur de recettes -->
-<p id="total-recipes" class="text-black-700 text-xl font-bold pt-2 relative top-1  ">1500 recettes</p>
+<p id="total-recipes" class="text-black-700 font-anton font-bold text-xl pt-2 relative top-3 left-24 ml-28  ">1500 recettes</p>
 
 </div>
  <!-- Conteneur pour les tags sélectionnés -->
