--- a/index.html
+++ b/index.html
@@ -63,6 +63,11 @@
     height:72px ; 
   }
 
+  #total-recipes {
+  white-space: nowrap;
+}
+
+
   </style>
 
 </head>
@@ -186,8 +191,11 @@
 <!-- Section où les médias seront affichés -->
 <div id="media-container" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8 px-24 ml-8 ">
 
-    <!-- Les recettes/médias seront injectés dynamiquement ici -->
+  <!-- Les recettes/médias seront injectés dynamiquement ici -->
 </div>
+
+
+
 
 <!-- Footer Section -->
 <footer class="bg-gray-800 text-white text-center py-4">
