--- a/index.html
+++ b/index.html
@@ -67,7 +67,6 @@
   white-space: nowrap;
 }
 
-
   </style>
 
 </head>
@@ -194,8 +193,8 @@
   <!-- Les recettes/médias seront injectés dynamiquement ici -->
 </div>
 
-
 <!-- Scripts JS -->
+<script type="module" src="./script/recipes.js"  ></script>
 <script type="module" src="./script/index.js"  ></script>
 <script type="module" src="./script/filtres.js" ></script>
 <script type="module" src="./script/main.js" ></script>
