--- a/index.html
+++ b/index.html
@@ -196,6 +196,7 @@
 
 
 <!-- Scripts JS -->
+<script type="module" src="./script/recipes.js"  ></script>
 <script type="module" src="./script/index.js"  ></script>
 <script type="module" src="./script/filtres.js" ></script>
 <script type="module" src="./script/main.js" ></script>
